--- a/index.html
+++ b/index.html
@@ -609,13 +609,28 @@ body::before {
 
     <section id="contact" class="section">
         <div class="container">
-            <h2>Contact Me</h2>
-            <form class="contact-form">
-                <input type="text" class="form-control mb-3" placeholder="Your Name">
-                <input type="email" class="form-control mb-3" placeholder="Your Email">
-                <textarea class="form-control mb-3" placeholder="Your Message"></textarea>
-                <button class="btn btn-light w-100">Send</button>
-            </form>
+        <h2>Contact Me</h2>
+                    <p>
+                        <strong>Email:</strong> 
+                        <a href="mailto:duttaankan13@gmail.com" style="text-decoration: none; color: #007bff; font-weight: bold;">
+                            ✉️ dattaankan13@gmail.com
+                        </a>
+                    </p>
+                    <p>
+                        <strong>Phone:</strong> 
+                        <a href="tel:+917439028818" style="text-decoration: none; color: #28a745; font-weight: bold;">
+                            📞 +91-74390 28818
+                        </a>
+                    </p>
+
+                    <form class="contact-form" method="POST" action="contact.php">
+                        <input type="text" class="form-control mb-3" name="name" placeholder="Your Name" required>
+                        <input type="email" class="form-control mb-3" name="email" placeholder="Your Email" required>
+                        <textarea class="form-control mb-3" name="message" placeholder="Your Message" required></textarea>
+                        <button class="btn btn-primary w-100" type="submit">Send</button>
+                    </form>
+
+
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/ankan-dutta-91811a198/" target="_blank"><i class="fab fa-linkedin"><img src="lin.png"></i></a>
                 <a href="https://www.github.com/UltimateVortex666" target="_blank"><i class="fab fa-github"><img src="git.png"></i></a>
